src/main/kotlin/org/nim/lang/parser/HandParser.kt
//package org.nim.lang.parser
//
//import com.intellij.lang.ASTNode
//import com.intellij.lang.LightPsiParser
//import com.intellij.lang.PsiBuilder
//import com.intellij.lang.PsiParser
//import com.intellij.psi.tree.IElementType
//import org.nim.psi.NimTokenTypes.*
//import org.nim.grammar.NimParserUtil.*
//
//class HandParser : PsiParser, LightPsiParser {
//    override fun parse(root: IElementType, builder: PsiBuilder): ASTNode {
//        TODO("not implemented") //To change body of created functions use File | Settings | File Templates.
//    }
//
//    override fun parseLight(root: IElementType?, builder: PsiBuilder?) {
//        TODO("not implemented") //To change body of created functions use File | Settings | File Templates.
//    }
//
//
//    enum class SymbolMode {smNormal, smAllowNil, smAfterDot}
//
//   enum class TPrimaryMode  {
//       pmNormal, pmTypeDesc, pmTypeDef, pmSkipSuffix
//   }
//
//
//    // implementation
////
////    fun getTok(p: NimPsiBuilder, level_: Int) {
////        // Get the next token from the parser's lexer, and store it in the parser's
////        // `tok` member.
////        rawGetTok(p.lex, p.tok)
////        p.hasProgress = true
////        when defined (nimpretty2):
////        emitTok(p.em, p.lex, p.tok)
////        while p.tok.tokType == TKCOMMENT:
////        rawGetTok(p.lex, p.tok)
////        emitTok(p.em, p.lex, p.tok)
////    }
////
////    fun openParser(p: NimPsiBuilder, level_: Int, fileIdx: FileIndex, inputStream: PLLStream,
////                   cache: IdentCache, config: ConfigRef) {
////        // Open a parser, using the given arguments to set up its internal state.
////        //
////        initToken(p.tok)
////        openLexer(p.lex, fileIdx, inputStream, cache, config)
////        when defined (nimpretty2):
////        openEmitter(p.em, cache, config, fileIdx)
////        getTok(p)                   // read the first token
////        p.firstTok = true
////        p.emptyNode = newNode(nkEmpty)
////    }
////
////    fun openParser(p: NimPsiBuilder, level_: Int, filename: AbsoluteFile, inputStream: PLLStream,
////                   cache: IdentCache, config: ConfigRef) {
////        openParser(p, fileInfoIdx(config, filename), inputStream, cache, config)
////    }
////
////    fun closeParser(p: NimPsiBuilder, level_: Int) {
////        // Close a parser, freeing up its resources.
////        closeLexer(p.lex)
////        when defined (nimpretty2):
////        closeEmitter(p.em)
////    }
//
//    fun parMessage(p: NimPsiBuilder, level_: Int, msg: TMsgKind, arg = "") {
//        // Produce and emit the parser message `arg` to output.
//       // lexMessageTok(p.lex, msg, p.tok, arg)
//    }
//
//    fun parMessage(p: NimPsiBuilder, level_: Int, msg: string, tok: TToken) {
//        // Produce and emit a parser message to output about the token `tok`
//        //parMessage(p, errGenerated, msg % prettyTok(tok))
//    }
//
//    fun parMessage(p: NimPsiBuilder, level_: Int, arg: string) {
//        // Produce and emit the parser message `arg` to output.
//        lexMessageTok(p.lex, errGenerated, p.tok, arg)
//
//        template withInd (p, body: untyped) =
//        let oldInd = p . currInd
//                p.currInd = p.tok.indent
//        body
//        p.currInd = oldInd
//
//        template realInd (p): bool = p.tok.indent > p.currInd
//        template sameInd (p): bool = p.tok.indent == p.currInd
//        template sameOrNoInd (p): bool = p.tok.indent == p.currInd or p.tok.indent < 0
//    }
//
//    fun rawSkipComment(p: NimPsiBuilder, level_: Int, node: PNode) {
//        if (p.tok.tokType == TKCOMMENT)
//        if node != nil:
//        when not defined(nimNoNilSeqs):
//        if node.comment == nil: node.comment = ""
//        when defined (nimpretty):
//        if p.tok.commentOffsetB > p.tok.commentOffsetA:
//        add node . comment, fileSection(p.lex.config, p.lex.fileIdx, p.tok.commentOffsetA, p.tok.commentOffsetB)
//        else:
//        add node . comment, p.tok.literal
//        else:
//        add(node.comment, p.tok.literal)
//        else:
//        parMessage(p, errInternal, "skipComment")
//        getTok(p)
//    }
//
//    fun skipComment(p: NimPsiBuilder, level_: Int, node: PNode) {
//        if p.tok.indent < 0: rawSkipComment(p, node)
//    }
//
//    fun flexComment(p: NimPsiBuilder, level_: Int, node: PNode) {
//        if p.tok.indent < 0 or realInd(p): rawSkipComment(p, node)
//    }
//
//    val errInvalidIndentation = "invalid indentation"
//    val errIdentifierExpected = "identifier expected, but got '$1'"
//    val errExprExpected = "expression expected, but found '$1'"
//    val errTokenExpected = "'$1' expected"
//
//    fun skipInd(p: NimPsiBuilder, level_: Int) {
//        if p.tok.indent >= 0:
//        if not realInd (p): parMessage(p, errInvalidIndentation)
//    }
//
//    fun optPar(p: NimPsiBuilder, level_: Int) {
//        if p.tok.indent >= 0:
//        if p.tok.indent < p.currInd: parMessage(p, errInvalidIndentation)
//    }
//
//    fun optInd(p: NimPsiBuilder, level_: Int, n: PNode) {
//        skipComment(p, n)
//        skipInd(p)
//    }
//
//    fun getTokNoInd(p: NimPsiBuilder, level_: Int) {
//        getTok(p)
//        if (p.tok.indent >= 0)
//            parMessage(p, errInvalidIndentation)
//    }
//
//    fun expectIdentOrKeyw(p: NimPsiBuilder, level_: Int) {
//        if(p.tok.tokType != TKSYMBOL and not isKeyword (p.tok.tokType))
//            lexMessage(p.lex, errGenerated, errIdentifierExpected % prettyTok(p.tok))
//    }
//
//    fun expectIdent(p: NimPsiBuilder, level_: Int) {
//        if (p.tok.tokType != TKSYMBOL)
//            lexMessage(p.lex, errGenerated, errIdentifierExpected % prettyTok(p.tok))
//    }
//
//    fun eat(p: NimPsiBuilder, level_: Int, tokType: TTokType) {
//        // Move the parser to the next token if the current token is of type
//        // `tokType`, otherwise error.
//        if (p.tok.tokType == tokType) {
//            getTok(p)
//        }else {
//            lexMessage(p.lex, errGenerated,
//                    "expected: '" & TokTypeToStr [tokType] & "', but got: '" & prettyTok(p.tok) & "'")
//        }
//    }
//
//    fun parLineInfo(p: NimPsiBuilder, level_: Int): TLineInfo {
//        // Retrieve the line information associated with the parser's current state.
//        result = getLineInfo(p.lex, p.tok)
//    }
//
//    fun indAndComment(p: NimPsiBuilder, level_: Int, n: PNode) {
//        if(p.tok.indent > p.currInd) {
//            if(p.tok.tokType == TKCOMMENT){
//                rawSkipComment(p, n)
//            } else {
//                parMessage(p, errInvalidIndentation)
//            }
//        }else {
//            skipComment(p, n)
//        }
//    }
//
//    fun newNodeP(kind: TNodeKind, p: NimPsiBuilder, level_: Int): PNode {
//        result = newNodeI(kind, parLineInfo(p))
//    }
//    fun newIntNodeP(kind: TNodeKind, intVal: BiggestInt, p: NimPsiBuilder, level_: Int): PNode {
//        result = newNodeP(kind, p)
//        result.intVal = intVal
//    }
//    fun newFloatNodeP(kind: TNodeKind, floatVal: BiggestFloat,
//                      p: NimPsiBuilder, level_: Int): PNode {
//        result = newNodeP(kind, p)
//        result.floatVal = floatVal
//    }
//
//    fun newStrNodeP(kind: TNodeKind, strVal: string, p: NimPsiBuilder, level_: Int): PNode {
//        result = newNodeP(kind, p)
//        result.strVal = strVal
//    }
//    fun newIdentNodeP(ident: PIdent, p: NimPsiBuilder, level_: Int): PNode {
//            result = newNodeP(nkIdent, p)
//    result.ident = ident
//
//}
//
//    fun isSigilLike(tok: TToken): Boolean {
//        result = tok.tokType == TKOPR and tok.ident.s[0] == '@'
//    }
//    fun isRightAssociative(tok: TToken): Boolean {
//        // Determines whether the token is right assocative.
//        result = tok.tokType == TKOPR and tok.ident.s[0] == '^'
//        // or (let L = tok.ident.s.len; L > 1 and tok.ident.s[L-1] == '>'))
//    }
//    fun isOperator(tok: TToken): Boolean {
//        // Determines if the given token is an operator type token.
//        tok.tokType in { TKOPR, TKDIV, TKMOD, TKSHL, TKSHR, TKIN, TKNOTIN, TKIS,
//                         TKISNOT, TKNOT, TKOF, TKAS, TKDOTDOT, TKAND, TKOR, TKXOR
//        }
//    }
//    fun isUnary(p: NimPsiBuilder, level_: Int): Boolean {
//        // Check if the current parser token is a unary operator
//        if p.tok.tokType in { TKOPR, TKDOTDOT } and
//                p.tok.strongSpaceB == 0 and
//                p.tok.strongSpaceA > 0:
//        result = true
//    }
//
//    fun checkBinary(p: NimPsiBuilder, level_: Int) {
//        // Check if the current parser token is a binary operator.
//        // we don't check '..' here as that's too annoying
//        if(p.tok.tokType == TKOPR) {
//            if(p.tok.strongSpaceB > 0 and p.tok.strongSpaceA != p.tok.strongSpaceB) {
//                parMessage(p, warnInconsistentSpacing, prettyTok(p.tok))
//            }
//        }
//        //| module = stmt ^* (';' / IND{=})
//        //|
//        //| comma = ',' COMMENT?
//        //| semicolon = ';' COMMENT?
//        //| colon = ':' COMMENT?
//        //| colcom = ':' COMMENT?
//        //|
//        //| operator =  OP0 | OP1 | OP2 | OP3 | OP4 | OP5 | OP6 | OP7 | OP8 | OP9
//        //|          | 'or' | 'xor' | 'and'
//        //|          | 'is' | 'isnot' | 'in' | 'notin' | 'of'
//        //|          | 'div' | 'mod' | 'shl' | 'shr' | 'not' | 'static' | '..'
//        //|
//        //| prefixOperator = operator
//        //|
//        //| optInd = COMMENT? IND?
//        //| optPar = (IND{>} | IND{=})?
//        //|
//        //| simpleExpr = arrowExpr (OP0 optInd arrowExpr)* pragma?
//        //| arrowExpr = assignExpr (OP1 optInd assignExpr)*
//        //| assignExpr = orExpr (OP2 optInd orExpr)*
//        //| orExpr = andExpr (OP3 optInd andExpr)*
//        //| andExpr = cmpExpr (OP4 optInd cmpExpr)*
//        //| cmpExpr = sliceExpr (OP5 optInd sliceExpr)*
//        //| sliceExpr = ampExpr (OP6 optInd ampExpr)*
//        //| ampExpr = plusExpr (OP7 optInd plusExpr)*
//        //| plusExpr = mulExpr (OP8 optInd mulExpr)*
//        //| mulExpr = dollarExpr (OP9 optInd dollarExpr)*
//        //| dollarExpr = primary (OP10 optInd primary)*
//    }
//    fun colcom(p: NimPsiBuilder, level_: Int, n: PNode) {
//        eat(p, TKCOLON)
//        skipComment(p, n)
//    }
//    const TKBUILTINMAGICS = {TKTYPE, TKSTATIC, TKADDR}
//
//    fun parseSymbol(p: NimPsiBuilder, level_: Int, mode = smNormal): PNode {
//        //| symbol = '`' (KEYW|IDENT|literal|(operator|'('|')'|'['|']'|'{'|'}'|'=')+)+ '`'
//        //|        | IDENT | KEYW
//        case p . tok . tokType
//                of TKSYMBOL :
//        result = newIdentNodeP(p.tok.ident, p)
//        getTok(p)
//        of tokKeywordLow .. tokKeywordHigh :
//        if p.tok.tokType in TKBUILTINMAGICS or mode == smAfterDot:
//        // for backwards compatibility these 2 are always valid:
//        result = newIdentNodeP(p.tok.ident, p)
//        getTok(p)
//        elif p . tok . tokType == TKNIL and mode == smAllowNil :
//        result = newNodeP(nkNilLit, p)
//        getTok(p)
//        else:
//        parMessage(p, errIdentifierExpected, p.tok)
//        result = p.emptyNode
//        of TKACCENT :
//        result = newNodeP(nkAccQuoted, p)
//        getTok(p)
//        // progress guaranteed
//        while true:
//        case p . tok . tokType
//                of TKACCENT :
//        if result.len == 0:
//        parMessage(p, errIdentifierExpected, p.tok)
//        break
//        of TKOPR, TKDOT, TKDOTDOT, TKEQUALS, TKPARLE..TKPARDOTRI:
//        var accm = ""
//        while p.tok.tokType in {
//            TKOPR, TKDOT, TKDOTDOT, TKEQUALS,
//            TKPARLE..TKPARDOTRI
//        }:
//        accm.add(tokToStr(p.tok))
//        getTok(p)
//        result.add(newIdentNodeP(p.lex.cache.getIdent(accm), p))
//        of tokKeywordLow .. tokKeywordHigh, TKSYMBOL, TKINTLIT..TKCHARLIT:
//        result.add(newIdentNodeP(p.lex.cache.getIdent(tokToStr(p.tok)), p))
//        getTok(p)
//        else:
//        parMessage(p, errIdentifierExpected, p.tok)
//        break
//        eat(p, TKACCENT)
//        else:
//        parMessage(p, errIdentifierExpected, p.tok)
//        // BUGFIX: We must consume a token here to prevent endless loops!
//        // But: this really sucks for idetools and keywords, so we don't do it
//        // if it is a keyword:
//        //if not isKeyword(p.tok.tokType): getTok(p)
//        result = p.emptyNode
//    }
//    fun colonOrEquals(p: NimPsiBuilder, level_: Int, a: PNode): PNode {
//        if p.tok.tokType == TKCOLON:
//        result = newNodeP(nkExprColonExpr, p)
//        getTok(p)
//        //optInd(p, result)
//        addSon(result, a)
//        addSon(result, parseExpr(p))
//        elif p . tok . tokType == TKEQUALS :
//        result = newNodeP(nkExprEqExpr, p)
//        getTok(p)
//        //optInd(p, result)
//        addSon(result, a)
//        addSon(result, parseExpr(p))
//        else:
//        result = a
//    }
//    fun exprColonEqExpr(p: NimPsiBuilder, level_: Int): PNode {
//        //| exprColonEqExpr = expr (':'|'=' expr)?
//        var a = parseExpr(p)
//        if p.tok.tokType == TKDO:
//        result = postExprBlocks(p, a)
//        else:
//        result = colonOrEquals(p, a)
//    }
//    fun exprList(p: NimPsiBuilder, level_: Int, endTok: TTokType, result: PNode) {
//        //| exprList = expr ^+ comma
//        when defined (nimpretty2):
//        inc p . em . doIndentMore
//                getTok(p)
//        optInd(p, result)
//        // progress guaranteed
//        while (p.tok.tokType != endTok) and(p.tok.tokType != TKEOF):
//        var a = parseExpr(p)
//        addSon(result, a)
//        if p.tok.tokType != TKCOMMA: break
//        getTok(p)
//        optInd(p, a)
//        when defined (nimpretty2):
//        dec p . em . doIndentMore
//    }
//    fun exprColonEqExprListAux(p: NimPsiBuilder, level_: Int, endTok: TTokType, result: PNode) {
//        assert(endTok in { TKCURLYRI, TKCURLYDOTRI, TKBRACKETRI, TKPARRI })
//        getTok(p)
//        optInd(p, result)
//        // progress guaranteed
//        while p.tok.tokType != endTok and p.tok.tokType != TKEOF:
//        var a = exprColonEqExpr(p)
//        addSon(result, a)
//        if p.tok.tokType != TKCOMMA: break
//        getTok(p)
//        // (1,) produces a tuple expression
//        if endTok == TKPARRI and p.tok.tokType == TKPARRI and result.kind == nkPar:
//        result.kind = nkTupleConstr
//        skipComment(p, a)
//        optPar(p)
//        eat(p, endTok)
//    }
//    fun exprColonEqExprList(p: NimPsiBuilder, level_: Int, kind: TNodeKind,
//    endTok: TTokType): PNode {
//        //| exprColonEqExprList = exprColonEqExpr (comma exprColonEqExpr)* (comma)?
//        result = newNodeP(kind, p)
//        exprColonEqExprListAux(p, endTok, result)
//    }
//    fun dotExpr(p: NimPsiBuilder, level_: Int, a: PNode): PNode {
//        //| dotExpr = expr '.' optInd (symbol | '[:' exprList ']')
//        //| explicitGenericInstantiation = '[:' exprList ']' ( '(' exprColonEqExpr ')' )?
//        var info = p.parLineInfo
//        getTok(p)
//        result = newNodeI(nkDotExpr, info)
//        optInd(p, result)
//        addSon(result, a)
//        addSon(result, parseSymbol(p, smAfterDot))
//        if p.tok.tokType == TKBRACKETLECOLON and p.tok.strongSpaceA <= 0:
//        var x = newNodeI(nkBracketExpr, p.parLineInfo)
//        // rewrite 'x.y[:z]()' to 'y[z](x)'
//        x.add result [1]
//        exprList(p, TKBRACKETRI, x)
//        eat(p, TKBRACKETRI)
//        var y = newNodeI(nkCall, p.parLineInfo)
//        y.add x
//                y.add result [0]
//        if p.tok.tokType == TKPARLE and p.tok.strongSpaceA <= 0:
//        exprColonEqExprListAux(p, TKPARRI, y)
//        result = y
//    }
//    fun qualifiedIdent(p: NimPsiBuilder, level_: Int): PNode {
//        //| qualifiedIdent = symbol ('.' optInd symbol)?
//        result = parseSymbol(p)
//        if p.tok.tokType == TKDOT: result = dotExpr(p, result)
//    }
//    fun setOrTableConstr(p: NimPsiBuilder, level_: Int): PNode {
//        //| setOrTableConstr = '{' ((exprColonEqExpr comma)* | ':' ) '}'
//        result = newNodeP(nkCurly, p)
//        getTok(p) // skip '{'
//        optInd(p, result)
//        if p.tok.tokType == TKCOLON:
//        getTok(p) // skip ':'
//        result.kind = nkTableConstr
//        else:
//        // progress guaranteed
//        while p.tok.tokType notin { TKCURLYRI, TKEOF }:
//        var a = exprColonEqExpr(p)
//        if a.kind == nkExprColonExpr: result.kind = nkTableConstr
//        addSon(result, a)
//        if p.tok.tokType != TKCOMMA: break
//        getTok(p)
//        skipComment(p, a)
//        optPar(p)
//        eat(p, TKCURLYRI) // skip '}'
//    }
//    fun parseCast(p: NimPsiBuilder, level_: Int): PNode {
//        //| castExpr = 'cast' '[' optInd typeDesc optPar ']' '(' optInd expr optPar ')'
//        result = newNodeP(nkCast, p)
//        getTok(p)
//        eat(p, TKBRACKETLE)
//        optInd(p, result)
//        addSon(result, parseTypeDesc(p))
//        optPar(p)
//        eat(p, TKBRACKETRI)
//        eat(p, TKPARLE)
//        optInd(p, result)
//        addSon(result, parseExpr(p))
//        optPar(p)
//        eat(p, TKPARRI)
//    }
//    fun setBaseFlags(n: PNode, base: TNumericalBase) {
//        case base
//                of base10 : discard
//                of base2 : incl (n.flags, nfBase2)
//        of base8 : incl (n.flags, nfBase8)
//        of base16 : incl (n.flags, nfBase16)
//    }
//    fun parseGStrLit(p: NimPsiBuilder, level_: Int, a: PNode): PNode {
//        case p . tok . tokType
//                of TKGSTRLIT :
//        result = newNodeP(nkCallStrLit, p)
//        addSon(result, a)
//        addSon(result, newStrNodeP(nkRStrLit, p.tok.literal, p))
//        getTok(p)
//        of TKGTRIPLESTRLIT :
//        result = newNodeP(nkCallStrLit, p)
//        addSon(result, a)
//        addSon(result, newStrNodeP(nkTripleStrLit, p.tok.literal, p))
//        getTok(p)
//        else:
//        result = a
//    }
//
//
//    fun semiStmtList(p: NimPsiBuilder, level_: Int, result: PNode) {
//        inc p . inSemiStmtList
//                result.add(complexOrSimpleStmt(p))
//        // progress guaranteed
//        while p.tok.tokType == TKSEMICOLON:
//        getTok(p)
//        optInd(p, result)
//        result.add(complexOrSimpleStmt(p))
//        dec p . inSemiStmtList
//                result.kind = nkStmtListExpr
//    }
//    fun parsePar(p: NimPsiBuilder, level_: Int): PNode {
//        //| parKeyw = 'discard' | 'include' | 'if' | 'while' | 'case' | 'try'
//        //|         | 'finally' | 'except' | 'for' | 'block' | 'const' | 'let'
//        //|         | 'when' | 'var' | 'mixin'
//        //| par = '(' optInd
//        //|           ( &parKeyw complexOrSimpleStmt ^+ ';'
//        //|           | ';' complexOrSimpleStmt ^+ ';'
//        //|           | pragmaStmt
//        //|           | simpleExpr ( ('=' expr (';' complexOrSimpleStmt ^+ ';' )? )
//        //|                        | (':' expr (',' exprColonEqExpr     ^+ ',' )? ) ) )
//        //|           optPar ')'
//        //
//        // unfortunately it's ambiguous: (expr: expr) vs (exprStmt); however a
//        // leading ';' could be used to enforce a 'stmt' context ...
//        result = newNodeP(nkPar, p)
//        getTok(p)
//        optInd(p, result)
//        flexComment(p, result)
//        if p.tok.tokType in { TKDISCARD, TKINCLUDE, TKIF, TKWHILE, TKCASE,
//                              TKTRY, TKDEFER, TKFINALLY, TKEXCEPT, TKFOR, TKBLOCK,
//                              TKCONST, TKLET, TKWHEN, TKVAR, TKFOR,
//                              TKMIXIN
//        }:
//        // XXX 'bind' used to be an expression, so we exclude it here;
//        // tests/reject/tbind2 fails otherwise.
//        semiStmtList(p, result)
//        elif p . tok . tokType == TKSEMICOLON :
//        // '(;' enforces 'stmt' context:
//        getTok(p)
//        optInd(p, result)
//        semiStmtList(p, result)
//        elif p . tok . tokType == TKCURLYDOTLE :
//        result.add(parseStmtPragma(p))
//        elif p . tok . tokType != TKPARRI :
//        var a = simpleExpr(p)
//        if p.tok.tokType == TKDO:
//        result = postExprBlocks(p, a)
//        elif p . tok . tokType == TKEQUALS :
//        // special case: allow assignments
//        let asgn = newNodeP (nkAsgn, p)
//        getTok(p)
//        optInd(p, result)
//        let b = parseExpr (p)
//        asgn.add a
//                asgn.add b
//                result.add(asgn)
//        if p.tok.tokType == TKSEMICOLON:
//        semiStmtList(p, result)
//        elif p . tok . tokType == TKSEMICOLON :
//        // stmt context:
//        result.add(a)
//        semiStmtList(p, result)
//        else:
//        a = colonOrEquals(p, a)
//        result.add(a)
//        if p.tok.tokType == TKCOMMA:
//        getTok(p)
//        skipComment(p, a)
//        // (1,) produces a tuple expression:
//        if p.tok.tokType == TKPARRI:
//        result.kind = nkTupleConstr
//        // progress guaranteed
//        while p.tok.tokType != TKPARRI and p.tok.tokType != TKEOF:
//        var a = exprColonEqExpr(p)
//        addSon(result, a)
//        if p.tok.tokType != TKCOMMA: break
//        getTok(p)
//        skipComment(p, a)
//        optPar(p)
//        eat(p, TKPARRI)
//    }
//    fun identOrLiteral(p: NimPsiBuilder, level_: Int, mode: TPrimaryMode): PNode {
//        //| literal = | INT_LIT | INT8_LIT | INT16_LIT | INT32_LIT | INT64_LIT
